fix: inicialização de comentarios corrigida na criação dos patches